fix video overflowing

--- a/files/assets/css/orgy.css
+++ b/files/assets/css/orgy.css
@@ -14,6 +14,7 @@
 
 .orgy-chat-window-item {
 	flex-grow: 2;
+	max-width: 25vw;
 }
 
 .rumble-player {
@@ -24,7 +25,7 @@
 
 #orgy-file-container {
 	position: relative;
-	width: min(1080px, 75vw);
+	width: -webkit-fill-available;
 }
 
 #orgy-file-container > video {
